--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>パソコニスタン</title>
     <meta property="og:title" content="パソコニスタン">
     <meta property="og:description" content="パソコンの国　パソコニスタン">
-    <meta property="og:url" content="https://pasokonistan.github.io/">
+    <meta property="og:url" content="https://pasokon.site/">
     <meta name="twitter:card" content="summary">
   </head>
   <body>
@@ -18,7 +18,7 @@
       <ul>
         <li>象徴: パソコン</li>
         <li>国歌: None</li>
-        <li>首都: <a href="https://github.com/pasokonistan">GitHub</a></li>
+        <li>首都: <a href="https://pasokon.site">pasokon.site</a></li>
         <li>政府: 無政府状態</li>
         <li>面積: 0mm<sup>2</sup></li>
         <li>人口: 符号なし64bit整数(<a href="https://doc.rust-lang.org/std/primitive.u64.html">u64</a>)</li>
@@ -30,6 +30,7 @@
       <ul>
         <li>2023年01月01日　建国</li>
         <li>2023年03月03日　<a href="https://pasokey.net">pasokey 自治区</a>　開放</li>
+        <li>2023年03月06日　<a href="https://pasokon.site">pasokon.site</a>　に遷都</li>
       </ul>
     </section>
   </body>
