--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <li>2023年01月01日　建国</li>
         <li>2023年03月03日　<a href="https://pasokey.net">pasokey 自治区</a>　開放</li>
         <li>2023年03月06日　<a href="https://pasokon.site">pasokon.site</a>　に遷都</li>
+        <li>2023年03月23日　オンラインナレッジスペース <a href="https://pasopedia.pasokon.site">pasopedia</a>　開設</li>
       </ul>
     </section>
   </body>
